5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1671_1101.log
== TEST (2019-04-24 15:38:55) 
-- CODE:
v = float(input("digite o valor: "))
t = input("")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:42) 
-- CODE:
v = float(input("digite o valor: "))
t = input("(C/R/I)")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:48) 
-- CODE:
v = float(input("digite o valor: "))
t = input("(C/R/I)")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:40:08) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("(C/R/I)")

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:48:18) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("(C/R/I)")
if(t != C) and (t!=R) and (t!=I) and (v <= 0):
print("Dados invalidos")
elif(t == C) and (v <= 500):
print(v*0,44)
elif(t == C) and (v>500):
print(v*0,66)
elif(t == C) and (v<=1000):
print(v*0,55)
elif(t == C) and (v>1000):
print(v*0,60)
-- ERROR:
File "XXXX", line 4
    print("Dados invalidos")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:48:32) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("(C/R/I)")
if(t != C) and (t!=R) and (t!=I) and (v <= 0):
print("Dados invalidos")
elif(t == C) and (v <= 500):
print(v*0,44)
elif(t == C) and (v>500):
print(v*0,66)
elif(t == C) and (v<=1000):
print(v*0,55)
elif(t == C) and (v>1000):
print(v*0,60)
-- ERROR:
File "XXXX", line 4
    print("Dados invalidos")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:48:45) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("(C/R/I)")
if(t != C) and (t!=R) and (t!=I) and (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
print(v*0,44)
elif(t == C) and (v>500):
print(v*0,66)
elif(t == C) and (v<=1000):
print(v*0,55)
elif(t == C) and (v>1000):
print(v*0,60)
-- ERROR:
File "XXXX", line 6
    print(v*0,44)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:49:03) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("(C/R/I)")
if(t != C) and (t!=R) and (t!=I) and (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(t != C) and (t!=R) and (t!=I) and (v <= 0):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:49:24) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("(C/R/I)")
if(t != C) and (t!=R) and (t!=I) and (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(t != C) and (t!=R) and (t!=I) and (v <= 0):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:49:46) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("(C/R/I)")
if(t != C) and (t != R) and (t != I) and (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(t != C) and (t != R) and (t != I) and (v <= 0):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:50:58) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("tipo de instalacao"
if(t != C) and (t != R) and (t != I) and (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- ERROR:
File "XXXX", line 3
    if(t != C) and (t != R) and (t != I) and (v <= 0):
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:51:10) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("tipo de instalacao")
if(t != C) and (t != R) and (t != I) and (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(t != C) and (t != R) and (t != I) and (v <= 0):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:51:44) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("tipo de instalacao ")
if(t != C) or (t != R) or (t != I) or (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(t != C) or (t != R) or (t != I) or (v <= 0):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:52:30) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("tipo de instalacao ")
if(t != "C") or (t != "R") or (t != "I") or (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:52:41) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("tipo de instalacao ")
if(t != "C") or (t != "R") or (t != "I") or (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:53:01) 
-- CODE:
v = float(input("consumo em kWh: "))
t = input("tipo de instalacao ")
if(t != "C") or (t != "R") or (t != "I") or (v <= 0):
	print("Dados invalidos")
elif(t == C) and (v <= 500):
	print(v*0,44)
elif(t == C) and (v>500):
	print(v*0,66)
elif(t == C) and (v<=1000):
	print(v*0,55)
elif(t == C) and (v>1000):
	print(v*0,60)
-- OUTPUT:
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
